# conda-dist

./: .gitignore  Cargo.toml  README.md
.github/workflows/: mdbook.yml  presubmit.yml  release.yml
conda-dist/: Cargo.toml  build.rs
conda-dist-install/: Cargo.toml
conda-dist-install/src/: bundle.rs  cli.rs  listing.rs  main.rs  operations.rs
conda-dist/src/: app.rs  cli.rs  conda.rs  config.rs  container.rs  downloader.rs  filters.rs  installer.rs  lib.rs  main.rs  progress.rs  workspace.rs
conda-dist/src/app/: container.rs  context.rs  environment.rs  installer.rs  mod.rs  package.rs  runtime.rs
conda-dist/src/app/package/: dependency_package_files.rs  model.rs  package-deb.sh  package-rpm.sh  plan.rs  render.rs  runner.rs
conda-dist/src/conda/: channels.rs  gateway.rs  lockfile.rs  mod.rs  networking.rs  platforms.rs  solver.rs  virtual_packages.rs
conda-dist/templates/: container.Dockerfile.txt  deb.control.txt  rpm.spec.nopayload.txt  rpm.spec.payload.txt
conda-dist/tests/: cli.rs
conda-dist/tests/cases/: lock-conflict.toml  lock-fresh.toml  lock-missing.toml  lock-stale.toml
conda-dist/tests/fixtures/lock-fresh/: portable-bash.toml
conda-dist/tests/fixtures/lock-missing/: portable-bash.toml
conda-dist/tests/fixtures/lock-stale/: portable-bash.toml
docs/: book.toml
docs/src/: SUMMARY.md  overview.md
docs/src/configuration/: common.md  container.md  index.md
docs/src/developer/: index.md  packaging.md
docs/src/developer/packaging/: containers.md  installers.md  native-packages.md
docs/src/output-formats/: containers.md  index.md  installer.md  native-packages.md
examples/: bash-minimal.toml  bash-split-deps.toml  bash.toml  conda-dist.toml  post-install.sh
scripts/: bootstrap-dev.sh  bootstrap-release.sh  e2e-example.sh  gen-manpage.sh  read-cargo-version.py
