[package]
name = "conda-dist-install"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
rattler = { version = "0.38.2" }
rattler_conda_types = "0.40.3"
rattler_lock = "0.25.3"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.7"
tempfile = "3.13.0"
