[package]
name = "conda-dist-install"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
rattler = { version = "0.38.2" }
rattler_conda_types = "0.40.3"
rattler_lock = "0.25.3"
rattler_package_streaming = "0.23.11"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "process"] }
url = "2.5.7"
tempfile = "3.23.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tabled = "0.20.0"
