[package]
name = "conda-dist"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.50", features = ["derive"] }
rattler = { version = "0.38.2" }
rattler_conda_types = "0.40.3"
rattler_lock = "0.25.3"
rattler_repodata_gateway = { version = "0.24.12", features = ["gateway"] }
rattler_solve = "3.0.8"
rattler_virtual_packages = "2.2.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
futures = "0.3.31"
rattler_digest = "1.1.7"
rattler_index = "0.26.4"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "stream"] }
url = "2.5.7"
tempfile = "3.23.0"
flate2 = "1.1.4"
tar = "0.4.44"
indicatif = "0.18.1"
oci-client = { version = "0.15", default-features = false, features = ["rustls-tls"] }
oci-spec = "0.8.3"
clap_mangen = "0.2"

[dev-dependencies]
trycmd = "0.15"
clap_mangen = "0.2"
