[package]
name = "conda-dist"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.50", features = ["derive"] }
rattler = { version = "0.38.2" }
rattler_conda_types = "0.40.3"
rattler_lock = "0.25.3"
rattler_repodata_gateway = { version = "0.24.12", features = ["gateway"] }
rattler_solve = "3.0.8"
rattler_virtual_packages = "2.2.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
futures = "0.3.31"
rattler_digest = "1.1.7"
rattler_index = "0.26.4"
rattler_networking = "0.25.20"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "stream"] }
url = "2.5.7"
askama = "0.15.1"
flate2 = "1.1.4"
libc = "0.2.171"
tempfile = "3.23.0"
tar = "0.4.44"
indicatif = "0.18.1"
oci-client = { version = "0.15", default-features = false, features = ["rustls-tls"] }
oci-spec = "0.8.3"
clap_mangen = "0.2"
reqwest-middleware = "0.4.2"

[dev-dependencies]
trycmd = "0.15"
clap_mangen = "0.2"
